--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -9382,6 +9382,24 @@ globbypotatorockhounding {
     B:globbypotatorockhoundingendermanBStairs=false
     B:globbypotatorockhoundingendermanSlab=false
     B:globbypotatorockhoundingendermanStairs=false
+    B:globbypotatorockhoundingendstoneBrick=true
+    B:globbypotatorockhoundingendstoneBrick.1=true
+    B:globbypotatorockhoundingendstoneBrick.10=true
+    B:globbypotatorockhoundingendstoneBrick.11=true
+    B:globbypotatorockhoundingendstoneBrick.12=true
+    B:globbypotatorockhoundingendstoneBrick.13=true
+    B:globbypotatorockhoundingendstoneBrick.14=true
+    B:globbypotatorockhoundingendstoneBrick.15=true
+    B:globbypotatorockhoundingendstoneBrick.2=true
+    B:globbypotatorockhoundingendstoneBrick.3=true
+    B:globbypotatorockhoundingendstoneBrick.4=true
+    B:globbypotatorockhoundingendstoneBrick.5=true
+    B:globbypotatorockhoundingendstoneBrick.6=true
+    B:globbypotatorockhoundingendstoneBrick.7=true
+    B:globbypotatorockhoundingendstoneBrick.8=true
+    B:globbypotatorockhoundingendstoneBrick.9=true
+    B:globbypotatorockhoundingendstoneSlab=false
+    B:globbypotatorockhoundingendstoneStairs=false
     B:globbypotatorockhoundingenergyAmplifier=false
     B:globbypotatorockhoundingenergyCondenser=false
     B:globbypotatorockhoundingfcBlock=false
@@ -12251,6 +12269,7 @@ globbypotatorockhounding {
     B:globbypotatorockhoundingwildBlocks.6=true
     B:globbypotatorockhoundingwildBlocks.7=true
     B:globbypotatorockhoundingwildBlocks.8=true
+    B:globbypotatorockhoundingwildBlocks.9=true
     B:globbypotatorockhoundingwildColumns=false
     B:globbypotatorockhoundingwildColumns.1=false
     B:globbypotatorockhoundingwildColumns.2=false
@@ -12260,6 +12279,7 @@ globbypotatorockhounding {
     B:globbypotatorockhoundingwildColumns.6=false
     B:globbypotatorockhoundingwildColumns.7=false
     B:globbypotatorockhoundingwildColumns.8=false
+    B:globbypotatorockhoundingwildColumns.9=false
     B:globbypotatorockhoundingwildFrames=false
     B:globbypotatorockhoundingwildFrames.1=false
     B:globbypotatorockhoundingwildFrames.2=false
@@ -12269,6 +12289,7 @@ globbypotatorockhounding {
     B:globbypotatorockhoundingwildFrames.6=false
     B:globbypotatorockhoundingwildFrames.7=false
     B:globbypotatorockhoundingwildFrames.8=false
+    B:globbypotatorockhoundingwildFrames.9=false
     B:globbypotatorockhoundingwildPillars=false
     B:globbypotatorockhoundingwildPillars.1=false
     B:globbypotatorockhoundingwildPillars.2=false
@@ -12278,6 +12299,7 @@ globbypotatorockhounding {
     B:globbypotatorockhoundingwildPillars.6=false
     B:globbypotatorockhoundingwildPillars.7=false
     B:globbypotatorockhoundingwildPillars.8=false
+    B:globbypotatorockhoundingwildPillars.9=false
     B:globbypotatorockhoundingwildPlates=false
     B:globbypotatorockhoundingwildPlates.1=false
     B:globbypotatorockhoundingwildPlates.2=false
@@ -12287,6 +12309,7 @@ globbypotatorockhounding {
     B:globbypotatorockhoundingwildPlates.6=false
     B:globbypotatorockhoundingwildPlates.7=false
     B:globbypotatorockhoundingwildPlates.8=false
+    B:globbypotatorockhoundingwildPlates.9=false
     B:globbypotatorockhoundingwildSegments=false
     B:globbypotatorockhoundingwildSegments.1=false
     B:globbypotatorockhoundingwildSegments.2=false
@@ -12296,6 +12319,7 @@ globbypotatorockhounding {
     B:globbypotatorockhoundingwildSegments.6=false
     B:globbypotatorockhoundingwildSegments.7=false
     B:globbypotatorockhoundingwildSegments.8=false
+    B:globbypotatorockhoundingwildSegments.9=false
     B:globbypotatorockhoundingwildVanillaColumns=false
     B:globbypotatorockhoundingwildVanillaColumns.1=false
     B:globbypotatorockhoundingwildVanillaColumns.10=false
@@ -12353,6 +12377,7 @@ globbypotatorockhounding {
     B:globbypotatorockhoundingwildWalls.6=false
     B:globbypotatorockhoundingwildWalls.7=false
     B:globbypotatorockhoundingwildWalls.8=false
+    B:globbypotatorockhoundingwildWalls.9=false
     B:globbypotatorockhoundingwitchBSlab=false
     B:globbypotatorockhoundingwitchBStairs=false
     B:globbypotatorockhoundingwitchSlab=false
@@ -12598,6 +12623,10 @@ globbypotatorockhounding {
     B:globbypotatorockhoundingzebraStair=false
     B:globbypotatorockhoundingzenBlack=false
     B:globbypotatorockhoundingzenBlack.1=false
+    B:globbypotatorockhoundingzenBlack.10=false
+    B:globbypotatorockhoundingzenBlack.11=false
+    B:globbypotatorockhoundingzenBlack.12=false
+    B:globbypotatorockhoundingzenBlack.13=false
     B:globbypotatorockhoundingzenBlack.2=false
     B:globbypotatorockhoundingzenBlack.3=false
     B:globbypotatorockhoundingzenBlack.4=false
@@ -12608,6 +12637,10 @@ globbypotatorockhounding {
     B:globbypotatorockhoundingzenBlack.9=false
     B:globbypotatorockhoundingzenBrown=false
     B:globbypotatorockhoundingzenBrown.1=false
+    B:globbypotatorockhoundingzenBrown.10=false
+    B:globbypotatorockhoundingzenBrown.11=false
+    B:globbypotatorockhoundingzenBrown.12=false
+    B:globbypotatorockhoundingzenBrown.13=false
     B:globbypotatorockhoundingzenBrown.2=false
     B:globbypotatorockhoundingzenBrown.3=false
     B:globbypotatorockhoundingzenBrown.4=false
@@ -12618,6 +12651,10 @@ globbypotatorockhounding {
     B:globbypotatorockhoundingzenBrown.9=false
     B:globbypotatorockhoundingzenGreen=false
     B:globbypotatorockhoundingzenGreen.1=false
+    B:globbypotatorockhoundingzenGreen.10=false
+    B:globbypotatorockhoundingzenGreen.11=false
+    B:globbypotatorockhoundingzenGreen.12=false
+    B:globbypotatorockhoundingzenGreen.13=false
     B:globbypotatorockhoundingzenGreen.2=false
     B:globbypotatorockhoundingzenGreen.3=false
     B:globbypotatorockhoundingzenGreen.4=false
@@ -12628,6 +12665,10 @@ globbypotatorockhounding {
     B:globbypotatorockhoundingzenGreen.9=false
     B:globbypotatorockhoundingzenPink=false
     B:globbypotatorockhoundingzenPink.1=false
+    B:globbypotatorockhoundingzenPink.10=false
+    B:globbypotatorockhoundingzenPink.11=false
+    B:globbypotatorockhoundingzenPink.12=false
+    B:globbypotatorockhoundingzenPink.13=false
     B:globbypotatorockhoundingzenPink.2=false
     B:globbypotatorockhoundingzenPink.3=false
     B:globbypotatorockhoundingzenPink.4=false
@@ -12638,6 +12679,10 @@ globbypotatorockhounding {
     B:globbypotatorockhoundingzenPink.9=false
     B:globbypotatorockhoundingzenRed=false
     B:globbypotatorockhoundingzenRed.1=false
+    B:globbypotatorockhoundingzenRed.10=false
+    B:globbypotatorockhoundingzenRed.11=false
+    B:globbypotatorockhoundingzenRed.12=false
+    B:globbypotatorockhoundingzenRed.13=false
     B:globbypotatorockhoundingzenRed.2=false
     B:globbypotatorockhoundingzenRed.3=false
     B:globbypotatorockhoundingzenRed.4=false
@@ -12648,6 +12693,10 @@ globbypotatorockhounding {
     B:globbypotatorockhoundingzenRed.9=false
     B:globbypotatorockhoundingzenWhite=false
     B:globbypotatorockhoundingzenWhite.1=false
+    B:globbypotatorockhoundingzenWhite.10=false
+    B:globbypotatorockhoundingzenWhite.11=false
+    B:globbypotatorockhoundingzenWhite.12=false
+    B:globbypotatorockhoundingzenWhite.13=false
     B:globbypotatorockhoundingzenWhite.2=false
     B:globbypotatorockhoundingzenWhite.3=false
     B:globbypotatorockhoundingzenWhite.4=false
@@ -12658,6 +12707,10 @@ globbypotatorockhounding {
     B:globbypotatorockhoundingzenWhite.9=false
     B:globbypotatorockhoundingzenYellow=false
     B:globbypotatorockhoundingzenYellow.1=false
+    B:globbypotatorockhoundingzenYellow.10=false
+    B:globbypotatorockhoundingzenYellow.11=false
+    B:globbypotatorockhoundingzenYellow.12=false
+    B:globbypotatorockhoundingzenYellow.13=false
     B:globbypotatorockhoundingzenYellow.2=false
     B:globbypotatorockhoundingzenYellow.3=false
     B:globbypotatorockhoundingzenYellow.4=false
