--- a/config/HungerOverhaul/HungerOverhaul.cfg
+++ b/config/HungerOverhaul/HungerOverhaul.cfg
@@ -194,7 +194,7 @@ harvestcraft {
     B:addSaplingTradesFarmer=true
 
     # Add high tier HarvestCraft foods to the items butcher villagers will sell (HarvestCraft) [vanilla: false] [default: true]
-    B:addTradesButcher=true
+    B:addTradesButcher=false
 
     # Weighted chance for food to be found in chests (addHarvestCraftChestLoot must be true) [vanilla: 5] [range: 1 ~ 2147483647, default: 5]
     I:chestLootChance=5
