--- a/config/RandomThings.cfg
+++ b/config/RandomThings.cfg
@@ -70,10 +70,10 @@ settings {
     B:BloodMoonBlackFog=false
 
     # The chance of a bloodmoon happening (0=Never;1=Every night;0.05=5% of all nights)
-    D:BloodMoonChance=1
+    D:BloodMoonChance=0.05
 
     # Whether players are NOT allowed to sleep during a bloodmoon
-    B:BloodMoonNoSleep=false
+    B:BloodMoonNoSleep=true
 
     # Whether light will be tinted red on a Bloodmoon
     B:BloodMoonRedLight=false
@@ -85,7 +85,7 @@ settings {
     B:BloodMoonRedSky=false
 
     # With which number should the default entity limit be multiplicated on a blood moon
-    I:BloodMoonSpawnLimitMult=1
+    I:BloodMoonSpawnLimitMult=3
 
     # How close can enemys spawn next to the player on a bloodmoon in blocks? (Vanilla=24)
     I:BloodMoonSpawnRange=24
@@ -94,13 +94,13 @@ settings {
     I:BloodMoonSpawnSpeed=1
 
     # Whether players in the overworld should receive a message at the beginning of the bloodmoon
-    B:BloodmoonMessage=false
+    B:BloodmoonMessage=true
 
     # Whether the Bloodmoon should respect the doMobSpawning gamerule
     B:BloodmoonRespectGamerule=true
 
     # Should monsters spawned by a bloodmoon vanish at dawn?
-    B:BloodmoonVanish=false
+    B:BloodmoonVanish=true
 
     # Bonemeal particles will appear whenever fertilized dirt boosts the plant
     B:FertilizedDirtGrowthIndicator=false
