--- a/config/SpecialAI.cfg
+++ b/config/SpecialAI.cfg
@@ -45,7 +45,7 @@ jockeys {
     D:_rider_chance=0.1
 
     # (Entity list) List of mobs that can be ridden on by normal-sized riders (normally non-aggressive mobs must have pathfinding AI enabled). Defaults to any kind of spider, pig, sheep, or cow.
-    S:mount_list=Spider,Pig,Sheep,Cow
+    S:mount_list=Spider,Pig,Sheep,Cow,Horse
 
     # (Entity list) List of mobs that can be ridden on by small riders or normal-sized riders that are babies (normally non-aggressive mobs must have pathfinding AI enabled). Defaults to any kind of chicken.
     S:mount_list_small=Chicken
