--- a/config/climatecontrol.cfg
+++ b/config/climatecontrol.cfg
@@ -14,7 +14,7 @@
     I:"Biome Size"=4
 
     # per thousand; vanilla is 10
-    I:"Mushroom Island Incidence"=10
+    I:"Mushroom Island Incidence"=0
 
     # generate as if CC weren't on; for loading pre-existing worlds or just preventing chunk boundaries
     B:"No Generation Changes"=false
@@ -45,10 +45,10 @@
     B:alterHighlandsWorlds=false
 
     # biomes not saved on edges; more than 3 has no effect; -1 deactivates saving biomes
-    I:biomeRingsNotSaved=3
+    I:biomeRingsNotSaved=-1
 
     # climate not saved on edges; -1 deactivates saving climates
-    I:climateRingsNotSaved=3
+    I:climateRingsNotSaved=-1
 
     # Have Climate Control set the biomes for village generation; may be incompatible with village mods
     B:controlVillageBiomes=false
@@ -114,22 +114,22 @@
 
 "ocean control parameters" {
     # frequency of large continent seeds, about 8000x16000
-    I:"Large Continent Frequency"=30
+    I:"Large Continent Frequency"=80
 
     # frequency of large island seeds, about 500x1000
-    I:"Large Island Frequency"=80
+    I:"Large Island Frequency"=40
 
     # frequency of medium continent seeds, about 4000x8000
-    I:"Medium Continent Frequency"=80
+    I:"Medium Continent Frequency"=240
 
     # frequency of medium island seeds, about 250x500
-    I:"Medium Island Frequency"=40
+    I:"Medium Island Frequency"=0
 
     # True reduces the chance of landmasses merging
-    B:SeparateLandmasses=true
+    B:SeparateLandmasses=false
 
     # frequency of small continent seeds, about 2000x4000
-    I:"Small Continent Frequency"=80
+    I:"Small Continent Frequency"=120
 }
 
 
