--- a/config/globbypotato_rockhounding.cfg
+++ b/config/globbypotato_rockhounding.cfg
@@ -191,12 +191,6 @@ misc_settings {
 }
 
 
-##########################################################################################################
-# rocks_building
-#--------------------------------------------------------------------------------------------------------#
-# These settings enable the spawning of rocks that will be used only for building purposes
-##########################################################################################################
-
 rocks_building {
     B:enableAlabaster=true
     B:enableAndesite=false
@@ -259,12 +253,6 @@ rocks_building {
     B:enableZoisite=true
 }
 
-
-##########################################################################################################
-# rocks_gemstone
-#--------------------------------------------------------------------------------------------------------#
-# These settings enable the spawning of each rock that will be used for both building purposes and gemstones making
-##########################################################################################################
 
 rocks_gemstone {
     B:enableAmazonite=true
@@ -365,10 +353,10 @@ ticking_settings {
 
 tiers_settings {
     I:TubesPlasticYeld=2
-    I:coalOresFrequency=8
+    I:coalOresFrequency=0
     I:coalOresMaxVeinSize=0
     I:coalOresMinVeinSize=0
-    B:enableOreTiers=false
+    B:enableOreTiers=true
     I:ironOresFrequency=0
     I:ironOresMaxVeinSize=0
     I:ironOresMinVeinSize=0
