--- a/local/client/config.json
+++ b/local/client/config.json
@@ -1,23 +1,22 @@
 {
   "ftbl": {
-    "debug_info": false,
     "item_ore_names": false,
     "item_reg_names": false,
     "notifications": "screen",
     "open_hsb_cg": false,
+    "player_options_shortcut": false,
     "reload_client_cmd": "reload_client"
   },
   "ftbu": {
+    "guide_unicode": true,
     "hide_armor_fg": false,
     "loaded_chunks_space_key": false,
-    "player_options_shortcut": false,
     "render_badges": true,
     "sort_friends_az": false
   },
   "sidebar_buttons": {
-    "claims": true,
-    "guide": true,
-    "info": true,
-    "settings": true
+    "ftbu.claimed_chunks": true,
+    "ftbu.guide": true,
+    "ftbu.server_info": true
   }
 }
