--- a/config/betterrain/betterrain.cfg
+++ b/config/betterrain/betterrain.cfg
@@ -116,3 +116,32 @@ rain {
 }
 
 
+sound {
+    # Enable biome sounds [default: true]
+    B:"Enable Biome Sounds"=true
+
+    "ice cracking" {
+        # 1-in-N chance for sound spawn [range: 1 ~ 2147483647, default: 10000]
+        I:Chance=10000
+
+        # Enable client side sound effect [default: true]
+        B:Enabled=true
+
+        # Factor to apply to sound volume [range: 0.0 ~ 5.0, default: 1.0]
+        S:"Scaling Factor"=1.0
+    }
+
+    "frog croaks" {
+        # 1-in-N chance for sound spawn [range: 1 ~ 2147483647, default: 25]
+        I:Chance=25
+
+        # Enable client side sound effect [default: true]
+        B:Enabled=true
+
+        # Factor to apply to sound volume [range: 0.0 ~ 5.0, default: 1.0]
+        S:"Scaling Factor"=1.0
+    }
+
+}
+
+
