Adding cover images and readjusting climatecontrol

--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -446,6 +446,12 @@ shedding {
     I:GalacticraftCore.AlienVillager.metadata=0
     I:GalacticraftCore.AlienVillager.rate=-1
 
+    # Configuration of Shedding for GalacticraftCore.Crawler
+    S:GalacticraftCore.Crawler.item=
+    I:GalacticraftCore.Crawler.lexiconDisplaySize=40
+    I:GalacticraftCore.Crawler.metadata=0
+    I:GalacticraftCore.Crawler.rate=-1
+
     # Configuration of Shedding for GalacticraftCore.EvolvedBossBlaze
     S:GalacticraftCore.EvolvedBossBlaze.item=
     I:GalacticraftCore.EvolvedBossBlaze.lexiconDisplaySize=40
