--- a/config/GalaxySpace/biomes.conf
+++ b/config/GalaxySpace/biomes.conf
@@ -28,6 +28,9 @@ dimensions {
     # ID Biome for Ganymede (Jupiter moon)
     I:IDGanymedeBiome=212
 
+    # ID Biome for Haumea
+    I:IDHaumeaBiome=224
+
     # ID Ash Biome for Io (Jupiter moon)
     I:IDIoAshBiome=210
 
