--- a/config/GalaxySpace/dimensions.conf
+++ b/config/GalaxySpace/dimensions.conf
@@ -7,6 +7,9 @@ dimensions {
     # Dimension ID for Barnarda E
     I:dimensionIDBarnardaE=-23
 
+    # Dimension ID for Barnarda F
+    I:dimensionIDBarnardaF=-31
+
     # Dimension ID for Callisto (Jupiter Moon)
     I:dimensionIDCallisto=-24
 
@@ -27,6 +30,9 @@ dimensions {
 
     # Dimension ID for Ganymede (Jupiter moon)
     I:dimensionIDGanymede=-15
+
+    # Dimension ID for Haumea
+    I:dimensionIDHaumea=-25
 
     # Dimension ID for Io (Jupiter moon)
     I:dimensionIDIo=-13
@@ -82,6 +88,9 @@ general {
     # Enable/Disable Pluto
     B:enablePluto=true
 
+    # Enable/Disable Haumea
+    B:enableHaumea=true
+
     # Enable/Disable Makemake
     B:enableMakemake=true
 
@@ -99,6 +108,9 @@ general {
 
     # Enable/Disable Ganymede (Jupiter Moon)
     B:enableGanymede=true
+
+    # Enable/Disable Callisto (Jupiter Moon)
+    B:enableCallisto=true
 
     # Enable/Disable Enceladus (Saturn Moon)
     B:enableEnceladus=true
@@ -130,8 +142,8 @@ general {
     # Enable/Disable Barnarda E
     B:enableBarnardaE=true
 
-    # Enable/Disable Callisto (Jupiter Moon)
-    B:enableCallisto=true
+    # Enable/Disable Barnarda F
+    B:enableBarnardaF=true
 }
 
 
