--- a/config/climatecontrol.cfg
+++ b/config/climatecontrol.cfg
@@ -14,7 +14,7 @@
     I:"Biome Size"=4
 
     # per thousand; vanilla is 10
-    I:"Mushroom Island Incidence"=0
+    I:"Mushroom Island Incidence"=10
 
     # generate as if CC weren't on; for loading pre-existing worlds or just preventing chunk boundaries
     B:"No Generation Changes"=false
@@ -23,7 +23,7 @@
     B:NoBoPSubBiomes=false
 
     # Percentage of rivers prevented; changes cause chunk boundaries at some rivers
-    I:PercentRiverReduction=100
+    I:PercentRiverReduction=0
 
     # increase smoothing steps; also shrinks unusual biomes some; changing produces occaisional chunk walls
     B:"Smoother Coastlines"=true
@@ -52,6 +52,9 @@
 
     # Have Climate Control set the biomes for village generation; may be incompatible with village mods
     B:controlVillageBiomes=false
+
+    # force small continent near origin
+    B:forceStartContinent=true
 
     # max height value for allowing rivers; 10.0 allows everything; 0.75 is plains but no hills
     D:maxChasm=10.0
@@ -114,19 +117,19 @@
 
 "ocean control parameters" {
     # frequency of large continent seeds, about 8000x16000
-    I:"Large Continent Frequency"=80
+    I:"Large Continent Frequency"=30
 
     # frequency of large island seeds, about 500x1000
-    I:"Large Island Frequency"=40
+    I:"Large Island Frequency"=120
 
     # frequency of medium continent seeds, about 4000x8000
-    I:"Medium Continent Frequency"=240
+    I:"Medium Continent Frequency"=60
 
     # frequency of medium island seeds, about 250x500
-    I:"Medium Island Frequency"=0
+    I:"Medium Island Frequency"=40
 
     # True reduces the chance of landmasses merging
-    B:SeparateLandmasses=false
+    B:SeparateLandmasses=true
 
     # frequency of small continent seeds, about 2000x4000
     I:"Small Continent Frequency"=120
