--- a/config/globbypotato_rockhounding.cfg
+++ b/config/globbypotato_rockhounding.cfg
@@ -136,6 +136,7 @@ gemology_settings {
     B:enableTanksCrafting=false
     I:gemstoneOresFrequency=4
     I:guruHutRarity=25
+    B:guruHutSpawnInSuperflat=true
     I:maxGemstoneVeinSize=4
     I:pawnshopFeeMax=48
     I:pawnshopFeeMin=8
@@ -325,6 +326,7 @@ support_settings {
     B:enableBoPWoodsSupport=false
     B:enableEtFuturumModSupport=true
     B:enableHarvestcraftSupport=false
+    B:enablePokeballSupport=true
     B:enableTubesSupport=true
     B:enableUBCSupport=true
 }
