Fix some miscellaneous formatting issues in custombees.cfg

--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -63,6 +63,9 @@ general {
     # Default minimum rain strength for a dimension [range: 0.0 ~ 1.0, default: 0.0]
     S:"Default Minimum Rain Strength"=0.0
 
+    # Adjust cloud graphics based on configured cloud height [default: true]
+    B:"Fancy Cloud Handling"=true
+
     # Block radius/range around player for special effect application [range: 8 ~ 32, default: 16]
     I:"Special Effect Range"=16
 }
