--- a/config/gendustry/custombees.cfg
+++ b/config/gendustry/custombees.cfg
@@ -33,153 +33,153 @@ if HaveForestryModule Bees <<
 	cfg HoneyCombs {
 		cfg rock {
 		  ID = 100
-          PrimaryColor = 	#CCCCFF
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0xCCCCFF
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg coppercomb {
 		  ID = 101
-          PrimaryColor = 	#FF9900
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0xFF9900
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg tincomb {
 		  ID = 102
-          PrimaryColor = 	#CBCBCB
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0xCBCBCB
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg nickelcomb {
 		  ID = 103
-          PrimaryColor = 	#F0EEC8
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0xF0EEC8
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg aluminumcomb {
 		  ID = 104
-          PrimaryColor = 	#F2E6E6
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0xF2E6E6
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg goldcomb {
 		  ID = 105
-          PrimaryColor = 	#FFFF00
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0xFFFF00
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg silvercomb {
 		  ID = 106
-          PrimaryColor = 	#F0F0F0
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0xF0F0F0
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg ironcomb {
 		  ID = 107
-          PrimaryColor = 	#B86900
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0xB86900
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg leadcomb {
 		  ID = 108
-          PrimaryColor = 	#494983
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0x494983
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg uraniumcomb {
 		  ID = 109
-          PrimaryColor = 	#00FF00
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0x00FF00
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg mercurycomb {
 		  ID = 110
-          PrimaryColor = 	#800000
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0x800000
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg titaniumcomb {
 		  ID = 111
-          PrimaryColor = 	#3A3838
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0x3A3838
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg lodestonecomb {
 		  ID = 112
-          PrimaryColor = 	#262626
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0x262626
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg dirtcomb {
 		  ID = 113
-          PrimaryColor = 	#663300
-          SecondaryColor =	#B86900
+          PrimaryColor = 	0x663300
+          SecondaryColor =	0xB86900
 		}
 		cfg claycomb {
 		  ID = 114
-          PrimaryColor = 	#6699CD
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0x6699CD
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg fossilcomb {
 		  ID = 115
-          PrimaryColor = 	#FFFFFF
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0xFFFFFF
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg coalcomb {
 		  ID = 116
-          PrimaryColor = 	#000000
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0x000000
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg crystalcomb {
 		  ID = 117
-          PrimaryColor = 	#68FFFF
-          SecondaryColor =	#717171
+          PrimaryColor = 	0x68FFFF
+          SecondaryColor =	0x717171
 		}
 		cfg diamondcomb {
 		  ID = 118
-          PrimaryColor = 	#00FFFF
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0x00FFFF
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg redstonecomb {
 		  ID = 119
-          PrimaryColor = 	#FF0000
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0xFF0000
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg fluoritecomb {
 		  ID = 120
-          PrimaryColor = 	#9900FF
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0x9900FF
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg ammoniacomb {
 		  ID = 121
-          PrimaryColor = 	#FFF2CC
-          SecondaryColor =	#CC0000
+          PrimaryColor = 	0xFFF2CC
+          SecondaryColor =	0xCC0000
 		}
 		cfg ambercomb {
 		  ID = 122
-          PrimaryColor = 	#E2BC18
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0xE2BC18
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg emeraldcomb {
 		  ID = 123
-          PrimaryColor = 	#009800
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0x009800
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg certuscomb {
 		  ID = 124
-          PrimaryColor = 	#68CCFF
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0x68CCFF
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg glowstonecomb {
 		  ID = 125
-          PrimaryColor = 	#FFE94B
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0xFFE94B
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg lapiscomb {
 		  ID = 126
-          PrimaryColor = 	#0000B0
-          SecondaryColor =	AAAAAA
+          PrimaryColor = 	0x0000B0
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg netherquartzcomb {
 		  ID = 127
-          PrimaryColor = 	#FFFFCC
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0xFFFFCC
+          SecondaryColor =	0xAAAAAA
 		}
 		cfg siliconcomb {
 		  ID = 128
-          PrimaryColor = 	#6F6F6F
-          SecondaryColor =	#5A5A5A
+          PrimaryColor = 	0x6F6F6F
+          SecondaryColor =	0x5A5A5A
 		}
 		cfg calcitecomb {
 		  ID = 129
-          PrimaryColor = 	#FF9933
-          SecondaryColor =	#AAAAAA
+          PrimaryColor = 	0xFF9933
+          SecondaryColor =	0xAAAAAA
 		}
 	}
 	
@@ -187,3 +187,5 @@ if HaveForestryModule Bees <<
 	cfg Bees {
         
     }
+    
+>>
