--- a/config/reccomplex.cfg
+++ b/config/reccomplex.cfg
@@ -5,7 +5,7 @@ balancing {
     B:avoidOverlappingGeneration=true
 
     # The base weight of RC village generation types. Vanilla average is about 10 - if you want to fully replace vanilla structures in villages, crank this up to something big. [range: 0 ~ 100000, default: 10]
-    I:baseVillageSpawnWeight=10
+    I:baseVillageSpawnWeight=20
     S:disabledModGeneration <
      >
     S:disabledStructures <
@@ -26,7 +26,7 @@ balancing {
     S:minDistToSpawnForGeneration=30.0
 
     # Resource Expression that will be applied to each loading structure, determining if it should be set to 'active'. [default: ]
-    S:structureGenerationMatcher="!$reccomplex"
+    S:structureGenerationMatcher=!$reccomplex
 
     # Resource Expression that will be applied to each loading structure, determining if it should be loaded. [default: ]
     S:structureLoadMatcher=
