--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -52,15 +52,23 @@ ores {
     # These settings should be auto-detected during worldgen and act as an override.
     # 0 will prevent flowers, 2 will enforce (set automatically), 1 is default. [range: 0 ~ 2, default: 1]
     I:OreExists...=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsAluminum=2
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsCadmium=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsCopper=2
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsFlourite=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsLead=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsNickel=2
 
     #  [range: 0 ~ 2, default: 1]
@@ -69,7 +77,11 @@ ores {
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsThorium=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsTin=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsUranium=2
 
     #  [range: 0 ~ 2, default: 1]
