fix ammo bags not holding Gun Customization ammo

--- a/config/forestry/backpacks.cfg
+++ b/config/forestry/backpacks.cfg
@@ -84,6 +84,25 @@ backpacks {
     adventurer {
         # Add itemStacks for the adventurer's backpack here in the format 'modid:name:meta'. For wildcard metadata the format is 'modid:name'.
         S:item.stacks <
+            GunCus:item.WholyGunCustom.HK_USP_9mm.magazine
+            GunCus:item.WholyGunCustom.Barret_M82A1.magazine
+            GunCus:item.WholyGunCustom.Desert_Eagle.magazine
+            GunCus:item.WholyGunCustom.M1911.magazine
+            GunCus:item.WholyGunCustom.M4A1.magazine
+            GunCus:item.WholyGunCustom.M249.magazine
+            GunCus:item.WholyGunCustom.MP5.magazine
+            GunCus:item.WholyGunCustom.P90.magazine
+            GunCus:item.WholyGunCustom.Steyr_AUG_a3.magazine
+            GunCus:item.WholyGunCustom.XM8.magazine
+            GunCus:item.WholyGunCustom.HAMR.magazine
+            GunCus:item.WholyGunCustom.magnumrifle.magazine
+            GunCus:item.WholyGunCustom.Flamethrower.magazine
+            GunCus:item.WholyGunCustom.IMI_Galil.magazine
+            GunCus:item.WholyGunCustom.FAMAS.magazine
+            GunCus:item.WholyGunCustom.HK416.magazine
+            GunCus:item.WholyGunCustom.UMP45.magazine
+            GunCus:item.WholyGunCustom.AK47.magazine
+            GunCus:item.WholyGunCustom.SPAS12.magazine            
          >
 
         # Add ore dictionary names for the adventurer's backpack here in the format 'oreDictName'.
