--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -40,19 +40,19 @@ fog {
     B:"Biome Fog"=true
 
     # Visibility factor to apply to biome fog (higher is thicker) [range: 0.0 ~ 5.0, default: 1.0]
-    S:"Biome Fog Factor"=1.0
+    S:"Biome Fog Factor"=0.4
 
     # Allow desert fog when raining [default: true]
     B:"Desert Fog"=true
 
     # Visibility factor to apply to desert fog (higher is thicker) [range: 0.0 ~ 5.0, default: 1.0]
-    S:"Desert Fog Factor"=1.0
+    S:"Desert Fog Factor"=0.3
 
     # Higher the player elevation the more haze that is experienced [default: true]
     B:"Elevation Haze"=true
 
     # Visibility factor to apply to elevation haze (higher is thicker) [range: 0.0 ~ 5.0, default: 1.0]
-    S:"Elevation Haze Factor"=1.0
+    S:"Elevation Haze Factor"=0.2
 }
 
 
@@ -103,7 +103,7 @@ logging {
     B:"Enable Debug Logging"=false
 
     # Enables/disables online version checking [default: true]
-    B:"Enable Online Version Check"=true
+    B:"Enable Online Version Check"=false
 }
 
 
@@ -119,10 +119,10 @@ player {
         B:Enable=true
 
         # Offset from left side of screen [range: 0 ~ 2147483647, default: 5]
-        I:"Left Offset"=5
+        I:"Left Offset"=25
 
         # Offset from top of screen [range: 0 ~ 2147483647, default: 5]
-        I:"Top Offset"=5
+        I:"Top Offset"=25
 
         # Transparency factor for icons (higher more solid) [range: 0.0 ~ 1.0, default: 0.5]
         S:Transparency=0.5
