--- a/config/neiintegration.cfg
+++ b/config/neiintegration.cfg
@@ -10,7 +10,7 @@ handlers {
 
 
 integrations {
-    B:Forestry=false
+    B:Forestry=true
 
     # Whether to enable Minecraft / Forge integration. Disable if this part of the mod causes crashes.
     B:"Minecraft / Forge"=true
