--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -52,6 +52,8 @@ ores {
     # These settings should be auto-detected during worldgen and act as an override.
     # 0 will prevent flowers, 2 will enforce (set automatically), 1 is default. [range: 0 ~ 2, default: 1]
     I:OreExists...=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsAluminum=2
 
     #  [range: 0 ~ 2, default: 1]
@@ -65,11 +67,17 @@ ores {
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsOsmium=0
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsSilver=2
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsThorium=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsTin=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsUranium=2
 
     #  [range: 0 ~ 2, default: 1]
