--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -28,6 +28,13 @@ biomes {
 }
 
 
+block {
+    # Configuration files for configuring Block sounds and behavior [default: ]
+    S:"Config Files" <
+     >
+}
+
+
 dimensions {
     # Configuration files for configuring Dimension Registry [default: ]
     S:"Config Files" <
@@ -72,28 +79,13 @@ general {
 
 
 jets {
-    # 1-in-N chance per random tick a bubblejet will spawn in water [range: 10 ~ 2147483647, default: 1800]
     I:"Bubblejet Spawn Chance"=1800
-
-    # Enable bubblejet spawn in water [default: true]
     B:"Bubblejets Enabled"=true
-
-    # 1-in-N chance per random tick a dustjet will spawn [range: 10 ~ 2147483647, default: 500]
     I:"Dustjets Chance"=500
-
-    # Enable dustjets at the bottom of blocks [default: true]
     B:"Dustjets Enabled"=true
-
-    # 1-in-N chance per random tick a firejet will spawn on lava blocks [range: 10 ~ 2147483647, default: 1800]
     I:"Firejet Spawn Chance"=1800
-
-    # Enable firejet spawn on lava blocks [default: true]
     B:"Firejets Enabled"=true
-
-    # Enable steamjets around water/lava [default: true]
     B:"Steamjets Enabled"=true
-
-    # 1-in-N chance per random tick a streamjet will spawn [range: 10 ~ 2147483647, default: 10]
     I:"Streamjets Chance"=10
 }
 
@@ -108,6 +100,9 @@ logging {
 
 
 player {
+    # Controls display of damage popoffs when an entity is damaged [default: true]
+    B:"Damage Popoffs"=true
+
     # Suppress player's potion particles from rendering [default: false]
     B:"Suppress Potion Particles"=false
 
