--- a/config/eirairc/shared.cfg
+++ b/config/eirairc/shared.cfg
@@ -72,7 +72,7 @@ bot {
     B:relayDeathMessages=false
 
     # If set to true, IRC join/leave messages from this IRC context will be sent to Minecraft chat.
-    B:relayIRCJoinLeave=true
+    B:relayIRCJoinLeave=false
 
     # If set to true, Minecraft join/leave messages will be sent to this IRC context.
     B:relayMinecraftJoinLeave=false
