--- a/config/enviromine/profiles/default/CustomProperties/thaumcraft.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/thaumcraft.cfg
@@ -1,21 +1,11 @@
 # Configuration file
 
-##########################################################################################################
-# biomes
-#--------------------------------------------------------------------------------------------------------#
-# Manually change the environmental properties of each biome
-##########################################################################################################
-
 biomes {
 
     "Tainted Land" {
         I:"01.Biome ID"=192
         B:"02.Allow Config Override"=false
-
-        # Water Quality: dirty, salty, cold, clean
         S:"03.Water Quality"=dirty
-
-        # Biome temperature in celsius (Player body temp is offset by + 12C)
         D:"04.Ambient Temperature"=10.50504210183448
         D:"05.Temp Rate"=0.0
         D:"06.Sanity Rate"=0.0
@@ -26,11 +16,7 @@ biomes {
     "Magical Forest" {
         I:"01.Biome ID"=193
         B:"02.Allow Config Override"=false
-
-        # Water Quality: dirty, salty, cold, clean
         S:"03.Water Quality"=dirty
-
-        # Biome temperature in celsius (Player body temp is offset by + 12C)
         D:"04.Ambient Temperature"=17.22075445642904
         D:"05.Temp Rate"=0.0
         D:"06.Sanity Rate"=0.0
@@ -41,11 +27,7 @@ biomes {
     Eerie {
         I:"01.Biome ID"=194
         B:"02.Allow Config Override"=false
-
-        # Water Quality: dirty, salty, cold, clean
         S:"03.Water Quality"=dirty
-
-        # Biome temperature in celsius (Player body temp is offset by + 12C)
         D:"04.Ambient Temperature"=10.50504210183448
         D:"05.Temp Rate"=0.0
         D:"06.Sanity Rate"=0.0
@@ -56,11 +38,7 @@ biomes {
     Eldritch {
         I:"01.Biome ID"=195
         B:"02.Allow Config Override"=false
-
-        # Water Quality: dirty, salty, cold, clean
         S:"03.Water Quality"=clean
-
-        # Biome temperature in celsius (Player body temp is offset by + 12C)
         D:"04.Ambient Temperature"=0.0
         D:"05.Temp Rate"=0.0
         D:"06.Sanity Rate"=0.0
@@ -70,10 +48,9 @@ biomes {
 
 }
 
+blocks {
 
-block {
-
-    BlockAiry {
+    tile_blockAiry_blockAiry {
         S:01.Name=Thaumcraft:blockAiry
         I:02.MetaID=-1
         S:03.DropName=
@@ -89,5 +66,6 @@ block {
     }
 
 }
+
 
 
