EiraIRC handles and Recurrent complex frequency

--- a/config/enviromine/profiles/default/CustomProperties/thaumcraft.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/thaumcraft.cfg
@@ -1,11 +1,21 @@
 # Configuration file
 
+##########################################################################################################
+# biomes
+#--------------------------------------------------------------------------------------------------------#
+# Manually change the environmental properties of each biome
+##########################################################################################################
+
 biomes {
 
     "Tainted Land" {
         I:"01.Biome ID"=192
         B:"02.Allow Config Override"=false
+
+        # Water Quality: dirty, salty, cold, clean
         S:"03.Water Quality"=dirty
+
+        # Biome temperature in celsius (Player body temp is offset by + 12C)
         D:"04.Ambient Temperature"=10.50504210183448
         D:"05.Temp Rate"=0.0
         D:"06.Sanity Rate"=0.0
@@ -16,7 +26,11 @@ biomes {
     "Magical Forest" {
         I:"01.Biome ID"=193
         B:"02.Allow Config Override"=false
+
+        # Water Quality: dirty, salty, cold, clean
         S:"03.Water Quality"=dirty
+
+        # Biome temperature in celsius (Player body temp is offset by + 12C)
         D:"04.Ambient Temperature"=17.22075445642904
         D:"05.Temp Rate"=0.0
         D:"06.Sanity Rate"=0.0
@@ -27,7 +41,11 @@ biomes {
     Eerie {
         I:"01.Biome ID"=194
         B:"02.Allow Config Override"=false
+
+        # Water Quality: dirty, salty, cold, clean
         S:"03.Water Quality"=dirty
+
+        # Biome temperature in celsius (Player body temp is offset by + 12C)
         D:"04.Ambient Temperature"=10.50504210183448
         D:"05.Temp Rate"=0.0
         D:"06.Sanity Rate"=0.0
@@ -38,7 +56,11 @@ biomes {
     Eldritch {
         I:"01.Biome ID"=195
         B:"02.Allow Config Override"=false
+
+        # Water Quality: dirty, salty, cold, clean
         S:"03.Water Quality"=clean
+
+        # Biome temperature in celsius (Player body temp is offset by + 12C)
         D:"04.Ambient Temperature"=0.0
         D:"05.Temp Rate"=0.0
         D:"06.Sanity Rate"=0.0
@@ -47,6 +69,13 @@ biomes {
     }
 
 }
+
+
+##########################################################################################################
+# blocks
+#--------------------------------------------------------------------------------------------------------#
+# Customise the physical properties and environmental effects of blocks
+##########################################################################################################
 
 blocks {
 
@@ -66,6 +95,5 @@ blocks {
     }
 
 }
-
 
 
