--- a/config/eirairc/shared.cfg
+++ b/config/eirairc/shared.cfg
@@ -27,7 +27,7 @@ bot {
     B:convertColors=true
 
     # The description for your IRC user. No effect in channels.
-    S:description=EiraIRC Bot
+    S:description=REVOLUTION|2 v.2.1.2.0
 
     # The list of minecraft commands (such as /stop) that are disabled for InterOp.
     S:disabledInterOpCommands <
