--- a/config/RandomThings.cfg
+++ b/config/RandomThings.cfg
@@ -67,7 +67,7 @@ settings {
     I:BiomeChargeTime=20
 
     # Whether fog will turn black on a Bloodmoon to look better with the red sky
-    B:BloodMoonBlackFog=false
+    B:BloodMoonBlackFog=true
 
     # The chance of a bloodmoon happening (0=Never;1=Every night;0.05=5% of all nights)
     D:BloodMoonChance=0.05
@@ -76,13 +76,13 @@ settings {
     B:BloodMoonNoSleep=true
 
     # Whether light will be tinted red on a Bloodmoon
-    B:BloodMoonRedLight=false
+    B:BloodMoonRedLight=true
 
     # Whether the moon will be red on a Bloodmoon
     B:BloodMoonRedMoon=true
 
     # Whether the sky will turn red on a Bloodmoon
-    B:BloodMoonRedSky=false
+    B:BloodMoonRedSky=true
 
     # With which number should the default entity limit be multiplicated on a blood moon
     I:BloodMoonSpawnLimitMult=2
