--- a/config/globbypotato_rockhounding.cfg
+++ b/config/globbypotato_rockhounding.cfg
@@ -358,7 +358,7 @@ tiers_settings {
     I:coalOresFrequency=0
     I:coalOresMaxVeinSize=0
     I:coalOresMinVeinSize=0
-    B:enableOreTiers=true
+    B:enableOreTiers=false
     I:ironOresFrequency=0
     I:ironOresMaxVeinSize=0
     I:ironOresMinVeinSize=0
