--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -64,7 +64,11 @@ ores {
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsFlourite=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsLead=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsNickel=2
 
     #  [range: 0 ~ 2, default: 1]
@@ -76,6 +80,8 @@ ores {
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsTin=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsUranium=2
 
     #  [range: 0 ~ 2, default: 1]
